tests/expectations/compiler/core/algorithms/integers/sha3_256/sha3_256_hash_to_u8.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:21
     |
  28 |         let a: u8 = SHA3_256::hash_to_u8(addr_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:21
     |
  29 |         let b: u8 = SHA3_256::hash_to_u8(bool_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:21
     |
  30 |         let c: u8 = SHA3_256::hash_to_u8(field_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:21
     |
  31 |         let d: u8 = SHA3_256::hash_to_u8(group_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:21
     |
  32 |         let e: u8 = SHA3_256::hash_to_u8(i8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:21
     |
  33 |         let f: u8 = SHA3_256::hash_to_u8(i16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:21
     |
  34 |         let g: u8 = SHA3_256::hash_to_u8(i32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:21
     |
  35 |         let h: u8 = SHA3_256::hash_to_u8(i64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:21
     |
  36 |         let i: u8 = SHA3_256::hash_to_u8(i128_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:21
     |
  37 |         let j: u8 = SHA3_256::hash_to_u8(u8_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:21
     |
  38 |         let k: u8 = SHA3_256::hash_to_u8(u16_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:21
     |
  39 |         let l: u8 = SHA3_256::hash_to_u8(u32_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:21
     |
  40 |         let m: u8 = SHA3_256::hash_to_u8(u64_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:21
     |
  41 |         let n: u8 = SHA3_256::hash_to_u8(u128_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:21
     |
  42 |         let o: u8 = SHA3_256::hash_to_u8(scalar_value);
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:21
     |
  44 |         let q: u8 = SHA3_256::hash_to_u8(Foo { a: 1u128, b: 1u128 });
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.sha3_256 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as u8;
    hash.sha3_256 true into r9 as u8;
    hash.sha3_256 1field into r10 as u8;
    hash.sha3_256 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as u8;
    hash.sha3_256 r0 into r12 as u8;
    hash.sha3_256 r1 into r13 as u8;
    hash.sha3_256 r2 into r14 as u8;
    hash.sha3_256 r3 into r15 as u8;
    hash.sha3_256 1i128 into r16 as u8;
    hash.sha3_256 r4 into r17 as u8;
    hash.sha3_256 r5 into r18 as u8;
    hash.sha3_256 r6 into r19 as u8;
    hash.sha3_256 r7 into r20 as u8;
    hash.sha3_256 1u128 into r21 as u8;
    hash.sha3_256 1scalar into r22 as u8;
    output r8 as u8.private;
    output r9 as u8.private;
    output r10 as u8.private;
    output r11 as u8.private;
    output r12 as u8.private;
    output r13 as u8.private;
    output r14 as u8.private;
    output r15 as u8.private;
    output r16 as u8.private;
    output r17 as u8.private;
    output r18 as u8.private;
    output r19 as u8.private;
    output r20 as u8.private;
    output r21 as u8.private;
    output r22 as u8.private;
    output 233u8 as u8.private;
>>>>>>> mainnet
